[project]
name = "FlowPy"
version = "0.0.1"
authors = [
  { name="Daniel Williams", email="daniel_williams@live.com" },
  { name="Zakaria Sabbagh", email="zassabbagh@gmail.com" },
]
description = "A static information flow checker in Python3"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/zsabbagh/flowpy"
"Bug Tracker" = "https://github.com/zsabbagh/flowpy/issues"


[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = [
  "."
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
